# UR5_Simulation

./: .gitignore  CMakeLists.txt
m/: README.md  UR5ikine.m  createUR5.m  demo_ikine.m  test_ikine.m
scenes/: exp_stage_1.ttt  exp_stage_2.ttt  main_exp.ttt  stage_P2P_move.ttt  try.ttt  ur5P.ttm
src/P2P_move/: CMakeLists.txt  package.xml
src/P2P_move/scripts/: send_waypoints.py  test.py
src/P2P_move/src/: send_waypoints.cpp
src/script_stage_1/: CMakeLists.txt  package.xml
src/script_stage_1/include/: DBSCAN.h  OBB.h
src/script_stage_1/src/: DBSCAN.cpp  OBB.cpp  basic_demo.cpp  main.cpp
src/script_stage_2/: CMakeLists.txt  package.xml  traj.csv
src/script_stage_2/m/: UR5ikineP.m  cal_traj.m  createUR5.m  createUR5_inCoppeliaSim.m  findUR5DHTableInCoppeliaSim.m
src/script_stage_2/src/: send_waypoints.cpp
